--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "connect-mysql2": "^2.2.6",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "ejs": "^3.1.10",
     "express": "^4.22.1",
     "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.2",
